<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/filters"
          android:title="@string/filters"
          android:showAsAction="always">
        <menu>
            <item android:id="@+id/crafting" android:title="@string/crafting"/>
            <item android:id="@+id/dragons" android:title="@string/dragons"/>
            <item android:id="@+id/items" android:title="@string/items"/>
            <item android:id="@+id/locations" android:title="@string/locations"/>
            <item android:id="@+id/people" android:title="@string/people"/>
            <item android:id="@+id/standingstones" android:title="@string/standingstones"/>
            <item android:id="@+id/wordwalls" android:title="@string/wordwalls"/>
        </menu>
    </item>
    

</menu>